--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link id="theme-link" rel="stylesheet" href="/themes/lara-light-purple/theme.css" />
     <title>Shared Homestay</title>
   </head>
   <body>
